--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Bellgance | Kamil' Ramazanov</title>
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.min.css">
 </head>
 
 <body class="container-fluid">
@@ -348,31 +348,6 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="mail" class="mail row">
-      <div class="spacer50"></div>
-
-      <div class="col-sm-12 col-xs-12">
-        <h2 class="text-center underline">Send mail to me</h2>
-        <div class="spacer50"></div>
-
-        <div class="row">
-          <div class="col-md-6 col-sm-8 col-xs-10 col-md-offset-3 col-sm-offset-2 col-xs-offset-1">
-            <form class="text-center" action="mail.php" method="POST">
-              <div class="form-group">
-                <input type="text" class="form-control" required name="user_name" placeholder="Your name">
-              </div>
-
-              <div class="form-group">
-                <input type="email" class="form-control" required name="user_email" placeholder="Your email">
-              </div>
-
-              <button type="submit" class="btn btn-primary">Отправить форму</button>
-            </form>
           </div>
         </div>
 
